width 1024px / Decalage position img

--- a/index.html
+++ b/index.html
@@ -1,70 +1,73 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Accueil</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <!-- HEADER -->
 
-<header>
-        <h1>Site de Préformation de Robin Craeye</h1>
-</header>
+    <header>
+      <h1>Site de Préformation de Robin Craeye</h1>
+    </header>
 
     <!-- NAV -->
 
-<aside>
-    <div class="navbar">
-    <nav>
-        <ul>
+    <aside>
+      <div class="navbar">
+        <nav>
+          <ul>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="rapport.html">Rapport</a></li>
             <li><a href="interview.html">Interview</a></li>
             <li><a href="parcours.html">Parcours</a></li>
             <li><a href="conclusion.html">Conclusion</a></li>
-            <li><img src="images/logo.png" alt="Logo_robin"></li>
-        </ul>
-    </nav>
-    </div>
-</aside>
+            <li><img src="images/logo.png" alt="Logo_robin" /></li>
+          </ul>
+        </nav>
+      </div>
+    </aside>
 
     <div class="container">
-    <div class="boxs">
-       <a href="rapport.html"><div class="box1">
+      <div class="boxs">
+        <a href="rapport.html">
+          <div class="box1">
             <h1>RAPPORT ENTREPRISE</h1>
-            <img src="images/reimagine_logo_fond.png" alt="logo_reimage">
-        </a> 
-        </div>
-        <div class="box2">
-            <a href="interview.html">
+            <img src="images/reimagine_logo_fond.png" alt="logo_reimage" />
+          </div>
+        </a>
+        <a href="interview.html">
+          <div class="box2">
             <h1>SECTION INTERVIEW</h1>
-            <img src="images/maxime.jpg" alt="logo_reimagine">
-            </a>
-        </div>
-    </div>
-    <div class="boxs">
-        <div class="box3">
-            <a href="parcours.html">
+            <img src="images/maxime.jpg" alt="logo_reimagine" />
+          </div>
+        </a>
+      </div>
+      <div class="boxs">
+        <a href="parcours.html">
+          <div class="box3">
             <h1>SECTION PARCOURS</h1>
-            <img src="images/logo.png" alt="Logo_Fox">
-            </a>
-        </div>
-        <div class="box4">
-            <a href="conclusion.html">
+            <img src="images/logo.png" alt="Logo_Fox" />
+          </div>
+        </a>
+        <a href="conclusion.html">
+          <div class="box4">
             <h1>SECTION CONCLUSION</h1>
-            <img src="images/fond-header.jpg" alt="tech">
-            </a>
-        </div>
+            <img src="images/fond-header.jpg" alt="tech" />
+          </div>
+        </a>
+      </div>
     </div>
-</div>
- 
 
     <!-- FOOTER -->
 
-<div class="footer-index"> <p>&copy; Robin Craeye - Site de préformation <img src="images/logo.png" alt="Logo_robin"></p></footer></div>
-
-</body>
+    <div class="footer-index">
+      <p>
+        &copy; Robin Craeye - Site de préformation
+        <img src="images/logo.png" alt="Logo_robin" />
+      </p>
+    </div>
+  </body>
 </html>
