Delete repetition css + link typo header

--- a/conclusion.html
+++ b/conclusion.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
     <title>Conclusion</title>
 </head>
 <body>
@@ -39,7 +42,7 @@
 
     </div>
 
-    <div class="conclusion-max">
+    <div class="blue-card">
         <h2>Bilan de l'échange</h2>
         <div class="container-subtitle"></div>
         <h3>Mes surprises suite à l’interview</h3>
