--- a/rapport.html
+++ b/rapport.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap"
+      rel="stylesheet"
+    />
     <title>Accueil</title>
   </head>
   <body>
@@ -75,7 +81,7 @@
         </div>
       </div>
       <div class="container-subtitle"></div>
-      <div class="conclusion-entreprise">
+      <div class="blue-card">
         <img src="images/reimagine_logo_fond.png" alt="Reimagine_Logo" />
         <h2>Organisation et Méthodologie</h2>
         <div class="container-subtitle"></div>
