--- a/parcours.html
+++ b/parcours.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap"
+      rel="stylesheet"
+    />
     <title>Parcours</title>
   </head>
   <body>
@@ -29,7 +35,7 @@
     </aside>
 
     <div class="container">
-      <div class="parcours">
+      <div class="blue-card">
         <h2>Mon parcours</h2>
         <div class="container-subtitle"></div>
         <h3>D’où je viens ? Qui je suis ? Vers où je vais ?</h3>
