--- a/rapport.html
+++ b/rapport.html
@@ -15,7 +15,7 @@
   <body>
     <!-- HEADER -->
 
-    <header>
+    <header id="top">
       <h1>Site de Préformation de Robin Craeye</h1>
     </header>
 
@@ -30,6 +30,7 @@
             <li><a href="interview.html">Interview</a></li>
             <li><a href="parcours.html">Parcours</a></li>
             <li><a href="conclusion.html">Conclusion</a></li>
+            <li><a href="#top">Retour en haut</a></li>
             <li><img src="images/logo.png" alt="Logo_robin" /></li>
           </ul>
         </nav>
